--- a/interim-report/interim.bib
+++ b/interim-report/interim.bib
@@ -1100,3 +1100,108 @@ abstract ={Auditory warnings are used throughout industry, transport, and the me
 URL ={https://www.noiseandhealth.org/article.asp?issn=1463-1741;year=2000;volume=2;issue=6;spage=27;epage=39;aulast=Edworthy;t=6},
 eprint ={https://www.noiseandhealth.org/article.asp?issn=1463-1741;year=2000;volume=2;issue=6;spage=27;epage=39;aulast=Edworthy;t=6}
 }
+
+@article{doi:10.1177/001872089403600410,
+author = {Kirby Gilliland and Robert E. Schlegel},
+title ={Tactile Stimulation of the Human Head for Information Display},
+journal = {Human Factors},
+volume = {36},
+number = {4},
+pages = {700-717},
+year = {1994},
+doi = {10.1177/001872089403600410},
+URL = {https://doi.org/10.1177/001872089403600410},
+eprint = {https://doi.org/10.1177/001872089403600410},
+abstract = { A series of three studies was conducted to explore the use of tactile stimulation or light tapping of the human head to inform a pilot of possible threats or other situations in the flight environment. Study I confirmed that subjects could achieve 100\% detection of the tactile stimuli. Localization performance, measured in Study 2, depended on the number of different stimulus sites and ranged from 93\% accuracy for 6 sites to 47\% accuracy for 12 sites across the parietal meridian of the head. In Study 3 we investigated the effect of performing the localization task simultaneously with a dual memory/tracking task or an air combat simulation task. These studies demonstrated that tactile information display could be an integral contributor to improved situation awareness, but not without cost to other task performance. The results of Study 3 were also examined with reference to popular models of attention and workload. }
+}
+
+@article{hawes2005examination,
+  title={Examination of head and chest located tactile information for infantry wayfinding},
+  author={Hawes, Vanessa L and Kumagai, Jason K and Tack, David W and Bossi, LL},
+  journal={Defence Research and Development Canada-Toronto},
+  year={2005}
+}
+
+@article{article,
+author = {Myles, Kimberly and Kalb, Joel},
+year = {2010},
+month = {03},
+pages = {34},
+title = {Guidelines for Head Tactile Communication}
+}
+
+@article{MYLES2015177,
+title = {The effect of hair density on the coupling between the tactor and the skin of the human head},
+journal = {Applied Ergonomics},
+volume = {48},
+pages = {177-185},
+year = {2015},
+issn = {0003-6870},
+doi = {https://doi.org/10.1016/j.apergo.2014.11.007},
+url = {https://www.sciencedirect.com/science/article/pii/S000368701400266X},
+author = {Kimberly Myles and Joel T. Kalb and Janea Lowery and Bheem P. Kattel},
+keywords = {Tactile sensitivity, Head tactile display, Vibrotactile detection on scalp},
+abstract = {The purpose of this study was to determine the effect of hair density on vibration detection thresholds associated with the perception of low frequency vibration stimuli applied to the head. A host of tactile sensitivity information exists for other parts of the body, however the same information is lacking for the head. Thirty-three college students, age 18-35, were recruited for the study. A mixed design was used to evaluate the effect of hair density, head location, and frequency on vibration detection thresholds. Results suggest that hair density might slightly impede vibration signals from reaching the scalp and reduce vibration sensitivity, for the least sensitive locations on the head. This research provides design recommendations for head-mounted tactile displays for women and those with hair that can be used to convey directional cues for navigation and as alerts to critical events in the environment.}
+}
+
+@INPROCEEDINGS{7463147,
+  author={de Jesus Oliveira, Victor Adriel and Nedel, Luciana and Maciel, Anderson and Brayda, Luca},
+  booktitle={2016 IEEE Haptics Symposium (HAPTICS)}, 
+  title={Spatial discrimination of vibrotactile stimuli around the head}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={1-6},
+  doi={10.1109/HAPTICS.2016.7463147}}
+
+@INPROCEEDINGS{1406917,
+  author={van Erp, J.B.F.},
+  booktitle={First Joint Eurohaptics Conference and Symposium on Haptic Interfaces for Virtual Environment and Teleoperator Systems. World Haptics Conference}, 
+  title={Vibrotactile spatial acuity on the torso: effects of location and timing parameters}, 
+  year={2005},
+  volume={},
+  number={},
+  pages={80-85},
+  abstract={The processing of spatio-temporal vibrotactile patterns by the torso was examined in two experiments. The first investigated the spatial acuity as function of location on the torso. A uniform acuity between 2 and 3 cm was found, except on the body midline where acuity was about 1 cm. This favorable effect was hypothesized to be caused by specific processing characteristics of the central nervous system. The second experiment focused on the effect of timing parameters in a localization task. The results indicated that localization performance was closely related to both temporal ordering and apparent motion. The results can be used to optimize torso display design and the patterns presented on those displays. Also, they demonstrate that even the most advanced displays have not reached the borders of the processing capacities of the torso.},
+  keywords={},
+  doi={10.1109/WHC.2005.144},
+  ISSN={},
+  month={March},}
+
+@InProceedings{10.1007/978-3-642-39802-5_3,
+author="Bertram, Craig
+and Evans, Mathew H.
+and Javaid, Mahmood
+and Stafford, Tom
+and Prescott, Tony",
+editor="Lepora, Nathan F.
+and Mura, Anna
+and Krapp, Holger G.
+and Verschure, Paul F. M. J.
+and Prescott, Tony J.",
+title="Sensory Augmentation with Distal Touch: The Tactile Helmet Project",
+booktitle="Biomimetic and Biohybrid Systems",
+year="2013",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="24--35",
+abstract="The Tactile Helmet is designed to augment a wearer's senses with a long range sense of touch. Tactile specialist animals such as rats and mice are capable of rapidly acquiring detailed information about their environment from their whiskers by using task-sensitive strategies. Providing similar information about the nearby environment, in tactile form, to a human operator could prove invaluable for search and rescue operations, or for partially-sighted people. Two key aspects of the Tactile Helmet are sensory augmentation, and active sensing. A haptic display is used to provide the user with ultrasonic range information. This can be interpreted in addition to, rather than instead of, visual or auditory information. Active sensing systems ``are purposive and information-seeking sensory systems, involving task specific control of the sensory apparatus'' [1]. The integration of an accelerometer allows the device to actively gate the delivery of sensory information to the user, depending on their movement. Here we describe the hardware, sensory transduction and characterisation of the Tactile Helmet device, before outlining potential use cases and benefits of the system.",
+isbn="978-3-642-39802-5"
+}
+
+@article{yamauchi2020vibro,
+  title={Vibro-tactile Notification in Different Environments for Motorcyclists},
+  author={Yamauchi, Yuta and Suzuki, Akimasa},
+  journal={no. c},
+  pages={59--65},
+  year={2020}
+}
+
+@article{krauss2021head,
+  title={A head-based vibrotactile compass for cyclists},
+  author={Krau{\ss}, Anna-Magdalena and Wittchen, Dennis and Kammer, Dietrich and Freitag, Georg},
+  journal={Mensch und Computer 2021-Workshopband},
+  year={2021},
+  publisher={Gesellschaft f{\"u}r Informatik eV}
+}
+
