--- a/interim-report/interim.bib
+++ b/interim-report/interim.bib
@@ -1122,7 +1122,7 @@ abstract = { A series of three studies was conducted to explore the use of tacti
   year={2005}
 }
 
-@article{article,
+@article{headguidelines,
 author = {Myles, Kimberly and Kalb, Joel},
 year = {2010},
 month = {03},
@@ -1203,5 +1203,35 @@ isbn="978-3-642-39802-5"
   journal={Mensch und Computer 2021-Workshopband},
   year={2021},
   publisher={Gesellschaft f{\"u}r Informatik eV}
+}
+
+@article{gardner1972sensory,
+  title={Sensory funneling. II. Cortical neuronal representation of patterned cutaneous stimuli.},
+  author={Gardner, Esther P and Spencer, W Alden},
+  journal={Journal of Neurophysiology},
+  volume={35},
+  number={6},
+  pages={954--977},
+  year={1972}
+}
+
+@article{10.1007/s00779-015-0894-4,
+author = {Kim, Youngsun and Lee, Jaedong and Kim, Gerard J.},
+title = {Extending "out of the Body" Tactile Phantom Sensations to 2D and Applying It to Mobile Interaction},
+year = {2015},
+issue_date = {December  2015},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+volume = {19},
+number = {8},
+issn = {1617-4909},
+url = {https://doi.org/10.1007/s00779-015-0894-4},
+doi = {10.1007/s00779-015-0894-4},
+abstract = {Funneling and saltation are the two major perceptual illusion techniques for vibro-tactile feedback. They can be used to minimize the number of vibrators on the interaction device in contact with the user body and thereby build a less cumbersome and less expensive feedback device. Recently, these techniques have been found to elicit an "out of the body" experience, i.e., phantom tactile sensations indirectly felt from the handheld object (external to the body). This paper explores the practical applicability of this theoretical result to mobile tactile interaction. Two psychophysical experiments were first conducted to validate the effects of "out of the body" funneling and saltation on an actual handheld smart phone along (1) 1D and (2) when extended, for the first time, to 2D. A third experiment was run to evaluate user experience, applying phantom sensation based on vibro-tactile feedback, using funneling, to a real-world application. Experimental results have confirmed the same "out of the body" 1D illusory effects on an actual mobile device. In addition, a 2D modulated phantom sensation with a resolution of 5 3 on a 3.5-inch display space was achieved through saltation and funneling. Finally, we showed that the phantom sensation does significantly improve the user experience for a real-world application with a small additional cost of a few more vibrators, compared to a conventional single vibrator-based device.},
+journal = {Personal Ubiquitous Comput.},
+month = {dec},
+pages = {1295–1311},
+numpages = {17},
+keywords = {Vibro-tactile feedback, Saltation, Phantom sensation, User experience, Illusory feedback, Funneling}
 }
 
