Updates from Overleaf

--- a/interim-report/interim.tex
+++ b/interim-report/interim.tex
@@ -204,7 +204,7 @@ For this reason, we restrict our configurations of tactors on the helmet to be l
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.70\textwidth]{images/head-regions.drawio.pdf}
+    \includegraphics[width=0.70\textwidth]{images/head-regions.pdf}
     \caption{Diagram shows the different regions of the head, as well as the placement of the tactors for our described system.}
     \label{fig:head-regions}
 \end{figure}
