--- a/interim-report/interim.bib
+++ b/interim-report/interim.bib
@@ -4,6 +4,13 @@ title={Garmin Varia RTL515},
 howpublished="\url{https://www.garmin.com/en-GB/p/698001}"
 }
 
+@misc{followdistance,
+author={National Highways},
+year={2022},
+title={National Highway urges drivers to use the new two-second rule in new campaign},
+howpublished="\url{https://www.gov.uk/government/news/national-highways-urges-drivers-to-use-the-two-second-rule-in-new-campaign}"
+}
+
 @misc{garminradar,
 author={Garmin},
 title={smrtGRiPS},
@@ -1235,3 +1242,20 @@ numpages = {17},
 keywords = {Vibro-tactile feedback, Saltation, Phantom sensation, User experience, Illusory feedback, Funneling}
 }
 
+@inproceedings{10.1145/2556288.2557404,
+author = {Prasad, Manoj and Taele, Paul and Goldberg, Daniel and Hammond, Tracy A.},
+title = {HaptiMoto: Turn-by-Turn Haptic Route Guidance Interface for Motorcyclists},
+year = {2014},
+isbn = {9781450324731},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2556288.2557404},
+doi = {10.1145/2556288.2557404},
+abstract = {A national study by the Australian Transport Safety Bureau revealed that motorcyclist deaths were nearly thirty times more prevalent than that of drivers of other vehicles. These fatalities represent approximately 5\% of all highway deaths each year, yet motorcycles account for only 2\% of all registered vehicles in the USA. Motorcyclists are highly exposed on the road, so maintaining situational awareness at all times is crucial. Route guidance systems enable users to efficiently navigate between locations using dynamic visual maps and audio directions, and have been well tested with motorists, but remain unsafe for use by motorcyclists. Audio/visual routing systems decrease motorcyclists' situational awareness and vehicle control, and thus elevate chances of an accident. To enable motorcyclists to take advantage of route guidance while maintaining situational awareness, we created HaptiMoto, a wearable haptic route guidance system. HaptiMoto uses tactile signals to encode the distance and direction of approaching turns, thus avoiding interference with audio/visual awareness. Our evaluations demonstrate that HaptiMoto is both intuitive and a safer alternative for motorcyclists compared to existing solutions.},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {3597–3606},
+numpages = {10},
+keywords = {vibro-tactile, route guidance, tactile interface, advanced traveler information system},
+location = {Toronto, Ontario, Canada},
+series = {CHI '14}
+}
