Updates from Overleaf

--- a/dissertation/example.tex
+++ b/dissertation/example.tex
@@ -1,14 +1,10 @@
-%% example.tex
-%% Jeremy Singer
-%% 16 Oct 12
-
 \documentclass{mpaper}
 
 \begin{document}
 
-\title{Example Paper for MSci Submission}
-\author{Clever Student}
-\matricnum{1234567a}
+\title{TactiHelm: A Vibrotactile Helmet for Cycling Safety}
+\author{Lewis Trundle}
+\matricnum{2469635t}
 
 \maketitle
 
