Updates from Overleaf

--- a/dissertation/mpaper.bib
+++ b/dissertation/mpaper.bib
@@ -8,19 +8,19 @@ howpublished="\url{https://smrtgrips.com/}"
 author={National Highways},
 year={2022},
 title={National Highway urges drivers to use the new two-second rule in new campaign},
-howpublished="\url{https://www.gov.uk/government/news/national-highways-urges-drivers-to-use-the-two-second-rule-in-new-campaign}"
+howpublished="\href{https://www.gov.uk/government/news/nationalhighways-urges-drivers-to-use-the-two-second-rule-in-new-campaign}{https://www.gov.uk/government/news/nationalhighways-urges-drivers-to-use-the-two-second-rule-in-new-campaign}"
 }
 
 @misc{garminradar,
 author={Garmin},
 title={Garmin Varia RTL515},
-howpublished="\url{https://www.garmin.com/en-GB/p/698001}"
+howpublished="\href{https://www.garmin.com/en-GB/p/698001}{https://www.garmin.com/en-GB/p/698001}"
 }
 
 @misc{usdot,
 author={United States Department of Transportation},
 title={US Connected Vehicles Program},
-howpublished="\url{https://www.its.dot.gov/research_archives/connected_vehicle/connected_vehicle.htm}"
+howpublished="\href{https://www.its.dot.gov/research_archives/connected_vehicle/connected_vehicle.htm}{https://www.its.dot.gov/research-archives/connected-vehicle/connected-vehicle.htm}"
 }
 
 @misc{vibrationmotor,
@@ -38,7 +38,7 @@ howpublished="\url{https://www.aranacorp.com/en/arduino-and-bluetooth-module-hc-
 @misc{anatomical,
 author={National Cancer Institute},
 title={Anatomical Terminology},
-howpublished="\url{https://training.seer.cancer.gov/anatomy/body/terminology.html}"
+howpublished="\href{https://training.seer.cancer.gov/anatomy/body/terminology.html}{https://training.seer.cancer.gov/anatomy/body/ terminology.html}"
 }
 
 @book{world2018global,
@@ -63,13 +63,13 @@ howpublished="\url{https://training.seer.cancer.gov/anatomy/body/terminology.htm
 @misc{arduinouno,
 author={Arduino.cc},
 title={UNO R3 Arduino Documentation},
-howpublished="\url{https://docs.arduino.cc/hardware/uno-rev3}"
+howpublished="\href{https://docs.arduino.cc/hardware/uno-rev3}{https://docs.arduino.cc/hardware/uno-rev3}"
 }
 
 @misc{hc06,
 author={Utmel Electronic},
 title={HC-06 Bluetooth Module: Pinout, Datasheet pdf and Arduino Connection},
-howpublished="\url{https://www.utmel.com/components/hc-06-bluetooth-module-pinout-datasheet-pdf-and-arduino-connection?id=884}"
+howpublished="\href{https://www.utmel.com/components/hc-06-bluetooth-module-pinout-datasheet-pdf-and-arduino-connection?id=884}{https://www.utmel.com/components/hc-06-bluetooth-module-pinout-datasheet-pdf-and-arduino-connection?id=884}"
 }
 
 @misc{bluetoothlimitations,
@@ -426,7 +426,7 @@ abstract = {Introduction: In the Netherlands, a survey was set up to monitor the
 author={Mary O’Connor},
 year={2022},
 title={Ban cyclists and e-scooter riders using phones, Tory peer urges},
-howpublished="\url{https://www.bbc.co.uk/news/uk-politics-61018584}"
+howpublished="\href{https://www.bbc.co.uk/news/uk-politics-61018584}{https://www.bbc.co.uk/news/uk-politics-61018584}"
 }
 
 @inproceedings{10.1145/3544548.3580971,
@@ -1259,3 +1259,147 @@ keywords = {vibro-tactile, route guidance, tactile interface, advanced traveler 
 location = {Toronto, Ontario, Canada},
 series = {CHI '14}
 }
+
+@article{joshi2015likert,
+  title={Likert scale: Explored and explained},
+  author={Joshi, Ankur and Kale, Saket and Chandel, Satish and Pal, D Kumar},
+  journal={British journal of applied science \& technology},
+  volume={7},
+  number={4},
+  pages={396--403},
+  year={2015}
+}
+
+@ARTICLE{Armstrong2014-vr,
+  title    = "When to use the Bonferroni correction",
+  author   = "Armstrong, Richard A",
+  abstract = "PURPOSE: The Bonferroni correction adjusts probability (p) values
+              because of the increased risk of a type I error when making
+              multiple statistical tests. The routine use of this test has been
+              criticised as deleterious to sound statistical judgment, testing
+              the wrong hypothesis, and reducing the chance of a type I error
+              but at the expense of a type II error; yet it remains popular in
+              ophthalmic research. The purpose of this article was to survey
+              the use of the Bonferroni correction in research articles
+              published in three optometric journals, viz. Ophthalmic \&
+              Physiological Optics, Optometry \& Vision Science, and Clinical
+              \& Experimental Optometry, and to provide advice to authors
+              contemplating multiple testing. RECENT FINDINGS: Some authors
+              ignored the problem of multiple testing while others used the
+              method uncritically with no rationale or discussion. A variety of
+              methods of correcting p values were employed, the Bonferroni
+              method being the single most popular. Bonferroni was used in a
+              variety of circumstances, most commonly to correct the
+              experiment-wise error rate when using multiple 't' tests or as a
+              post-hoc procedure to correct the family-wise error rate
+              following analysis of variance (anova). Some studies quoted
+              adjusted p values incorrectly or gave an erroneous rationale.
+              SUMMARY: Whether or not to use the Bonferroni correction depends
+              on the circumstances of the study. It should not be used
+              routinely and should be considered if: (1) a single test of the
+              'universal null hypothesis' (Ho ) that all tests are not
+              significant is required, (2) it is imperative to avoid a type I
+              error, and (3) a large number of tests are carried out without
+              preplanned hypotheses.",
+  journal  = "Ophthalmic Physiol Opt",
+  volume   =  34,
+  number   =  5,
+  pages    = "502--508",
+  month    =  apr,
+  year     =  2014,
+  address  = "England",
+  keywords = "Bonferroni correction; Clinical \& Experimental Optometry;
+              Ophthalmic \& Physiological Optics; Optometry \& Vision Science;
+              statistical guidelines",
+  language = "en"
+}
+
+
+@misc{followdistancedef,
+author={Samsara},
+year={2021},
+title={Following Distance: How to Coach CMV Drivers and Decrease Tailgating},
+howpublished="\href{https://www.samsara.com/guides/following-distance/}{https://www.samsara.com/guides/following-distance/}"
+}
+
+@article{doi:10.1177/154193120605000909,
+author = {Sandra G. Hart},
+title ={Nasa-Task Load Index (NASA-TLX); 20 Years Later},
+journal = {Proceedings of the Human Factors and Ergonomics Society Annual Meeting},
+volume = {50},
+number = {9},
+pages = {904-908},
+year = {2006},
+doi = {10.1177/154193120605000909},
+URL = {https://doi.org/10.1177/154193120605000909},
+eprint = {https://doi.org/10.1177/154193120605000909},
+abstract = { NASA-TLX is a multi-dimensional scale designed to obtain workload estimates from one or more operators while they are performing a task or immediately afterwards. The years of research that preceded subscale selection and the weighted averaging approach resulted in a tool that has proven to be reasonably easy to use and reliably sensitive to experimentally important manipulations over the past 20 years. Its use has spread far beyond its original application (aviation), focus (crew complement), and language (English). This survey of 550 studies in which NASA-TLX was used or reviewed was undertaken to provide a resource for a new generation of users. The goal was to summarize the environments in which it has been applied, the types of activities the raters performed, other variables that were measured that did (or did not) covary, methodological issues, and lessons learned }
+}
+
+@article{sus,
+author = {Brooke, John},
+year = {1995},
+month = {11},
+pages = {},
+title = {SUS: A quick and dirty usability scale},
+volume = {189},
+journal = {Usability Eval. Ind.}
+}
+
+@inbook{Spector1990VisualFields,
+  author = "Spector, RH",
+  title = {Visual Fields},
+  pages = "In \textit{Clinical Methods: The History, Physical, and Laboratory Examinations}",
+  year = {1990},
+  chapter = {116},
+  editor = "Walker, HK and Hall, WD and Hurst, JW",
+  edition = "3",
+  publisher = "Butterworths",
+  address = "Boston"
+}
+
+@article{10.5555/2835587.2835589,
+author = {Bangor, Aaron and Kortum, Philip and Miller, James},
+title = {Determining what individual SUS scores mean: adding an adjective rating scale},
+year = {2009},
+issue_date = {May 2009},
+publisher = {Usability Professionals' Association},
+address = {Bloomingdale, IL},
+volume = {4},
+number = {3},
+abstract = {The System Usability Scale (SUS) is an inexpensive, yet effective tool for assessing the usability of a product, including Web sites, cell phones, interactive voice response systems, TV applications, and more. It provides an easy-to-understand score from 0 (negative) to 100 (positive). While a 100-point scale is intuitive in many respects and allows for relative judgments, information describing how the numeric score translates into an absolute judgment of usability is not known. To help answer that question, a seven-point adjective-anchored Likert scale was added as an eleventh question to nearly 1,000 SUS surveys. Results show that the Likert scale scores correlate extremely well with the SUS scores (r=0.822). The addition of the adjective rating scale to the SUS may help practitioners interpret individual SUS scores and aid in explaining the results to non-human factors professionals.},
+journal = {J. Usability Studies},
+month = {may},
+pages = {114–123},
+numpages = {10},
+keywords = {SUS, surveys, system usability scale, usability, user satisfaction}
+}
+
+@inproceedings{10.1145/3342197.3344546,
+author = {Lee, Yee Mun and Madigan, Ruth and Garcia, Jorge and Tomlinson, Andrew and Solernou, Albert and Romano, Richard and Markkula, Gustav and Merat, Natasha and Uttley, Jim},
+title = {Understanding the Messages Conveyed by Automated Vehicles},
+year = {2019},
+isbn = {9781450368841},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3342197.3344546},
+doi = {10.1145/3342197.3344546},
+abstract = {Efficient and safe interactions between automated vehicles and other road users can be supported through external Human-Machine Interfaces (eHMI). The success of these interactions relies on the eHMI signals being adequately understood by other road users. A paired-comparison forced choice task (Task 1), and a 6-point rating task (Task 2) were used to assess the extent to which ten different eHMI signals conveyed three separate messages, 'I am giving way', 'I am in automated mode' and 'I will start moving'. The different eHMI options consisted of variations of a 360° lightband, a single lamp, and an auditory signal. Results demonstrated that the same eHMI format could convey different messages equally well, suggesting a need to be cautious when designing eHMI, to avoid presenting misleading, potentially unsafe, information. Future research should investigate whether the use of an eHMI signal indicating a change in the AV's behaviour is sufficient for conveying intention.},
+booktitle = {Proceedings of the 11th International Conference on Automotive User Interfaces and Interactive Vehicular Applications},
+pages = {134–143},
+numpages = {10},
+keywords = {signal message, signal design, eHMI, comprehension, automated vehicles},
+location = {Utrecht, Netherlands},
+series = {AutomotiveUI '19}
+}
+
+@ARTICLE{9415164,
+  author={Low, Andrew K. and Zook, Zane A. and Fleck, Joshua J. and O'Malley, Marcia K.},
+  journal={IEEE Transactions on Haptics}, 
+  title={Effects of Interfering Cue Separation Distance and Amplitude on the Haptic Detection of Skin Stretch}, 
+  year={2021},
+  volume={14},
+  number={2},
+  pages={254-259},
+  keywords={Haptic interfaces;Interference;Skin;Particle measurements;Atmospheric measurements;Testing;Vibrations;Multi-sensory haptics;psychophysics;haptic perception;cutaneous haptics.},
+  doi={10.1109/TOH.2021.3075387}}
